partial/force-app/main/default/objects/Opportunity/fields/Adr_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Adr_Line_2__c</fullName>
    <formula>Unit__r.Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>