partial/force-app/main/default/objects/Opportunity/fields/Adr_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Adr_Line_3__c</fullName>
    <formula>Unit__r.Address_Line_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 3</label>
    <type>Text</type>
</CustomField>