partial/force-app/main/default/objects/Opportunity/fields/Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role__c</fullName>
    <label>Agent Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>managed</fullName>
            </value>
            <value>
                <fullName>rentCollection</fullName>
            </value>
            <value>
                <fullName>collectFirstPayment</fullName>
            </value>
            <value>
                <fullName>collectRentToDate</fullName>
            </value>
            <value>
                <fullName>lettingOnly</fullName>
            </value>
            <value>
                <fullName>introducingTenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>