partial/force-app/main/default/objects/Opportunity/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <label>Agreement Signed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>