partial/force-app/main/default/objects/Opportunity/fields/Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price__c</fullName>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>