partial/force-app/main/default/objects/Opportunity/fields/Booking_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Booking Fee for Unit Reservation</inlineHelpText>
    <label>Booking Fee Paid</label>
    <type>Checkbox</type>
</CustomField>