partial/force-app/main/default/objects/Opportunity/fields/Budget_Min__c.field-meta.xml
<CustomField>
    <fullName>Budget_Min__c</fullName>
    <label>Budget (Min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Min</fullName>
            </value>
            <value>
                <fullName>200,000</fullName>
            </value>
            <value>
                <fullName>300,000</fullName>
            </value>
            <value>
                <fullName>400,000</fullName>
            </value>
            <value>
                <fullName>500,000</fullName>
            </value>
            <value>
                <fullName>600,000</fullName>
            </value>
            <value>
                <fullName>700,000</fullName>
            </value>
            <value>
                <fullName>800,000</fullName>
            </value>
            <value>
                <fullName>900,000</fullName>
            </value>
            <value>
                <fullName>1,000,000</fullName>
            </value>
            <value>
                <fullName>1,250,000</fullName>
            </value>
            <value>
                <fullName>2,000,000</fullName>
            </value>
            <value>
                <fullName>2,500,000</fullName>
            </value>
            <value>
                <fullName>3,000,000</fullName>
            </value>
            <value>
                <fullName>4,000,000</fullName>
            </value>
            <value>
                <fullName>5,000,000</fullName>
            </value>
            <value>
                <fullName>6,000,000</fullName>
            </value>
            <value>
                <fullName>8,000,000</fullName>
            </value>
            <value>
                <fullName>10,000,000</fullName>
            </value>
            <value>
                <fullName>15,000,000</fullName>
            </value>
            <value>
                <fullName>20,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>