partial/force-app/main/default/objects/Opportunity/fields/Building_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_New__c</fullName>
    <formula>Unit__r.BuildingName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>