partial/force-app/main/default/objects/Opportunity/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <label>BuildingName old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>