partial/force-app/main/default/objects/Opportunity/fields/BuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingNumber__c</fullName>
    <label>BuildingNumber old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>