partial/force-app/main/default/objects/Opportunity/fields/BuildingNumber_New__c.field-meta.xml
<CustomField>
    <fullName>BuildingNumber_New__c</fullName>
    <formula>Unit__r.BuildingNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Number</label>
    <type>Text</type>
</CustomField>