partial/force-app/main/default/objects/Opportunity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>