partial/force-app/main/default/objects/Opportunity/fields/Country_Cod__c.field-meta.xml
<CustomField>
    <fullName>Country_Cod__c</fullName>
    <formula>Unit__r.Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>