partial/force-app/main/default/objects/Opportunity/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>