partial/force-app/main/default/objects/Opportunity/fields/Decoration__c.field-meta.xml
<CustomField>
    <fullName>Decoration__c</fullName>
    <label>Decoration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>VeryGood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>