partial/force-app/main/default/objects/Opportunity/fields/Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>