partial/force-app/main/default/objects/Opportunity/fields/Disposal__c.field-meta.xml
<CustomField>
    <fullName>Disposal__c</fullName>
    <label>Disposal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>