partial/force-app/main/default/objects/Opportunity/fields/Exchanged__c.field-meta.xml
<CustomField>
    <fullName>Exchanged__c</fullName>
    <label>Exchange Date</label>
    <type>Date</type>
</CustomField>