partial/force-app/main/default/objects/Opportunity/fields/Exchanged_Company_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Company_Fee__c</fullName>
    <label>Selling Company Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>