partial/force-app/main/default/objects/Opportunity/fields/Exchanged_Price__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Price__c</fullName>
    <label>Exchanged Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>