partial/force-app/main/default/objects/Opportunity/fields/Fee_type__c.field-meta.xml
<CustomField>
    <fullName>Fee_type__c</fullName>
    <label>Total Company Fee Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>