partial/force-app/main/default/objects/Opportunity/fields/Funding_mode__c.field-meta.xml
<CustomField>
    <fullName>Funding_mode__c</fullName>
    <label>How are you funding your Purchase?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>