partial/force-app/main/default/objects/Opportunity/fields/Furnishing__c.field-meta.xml
<CustomField>
    <fullName>Furnishing__c</fullName>
    <label>Furnishing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>furnished</fullName>
            </value>
            <value>
                <fullName>partFurnished</fullName>
            </value>
            <value>
                <fullName>unfurnished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>