partial/force-app/main/default/objects/Opportunity/fields/Instructed__c.field-meta.xml
<CustomField>
    <fullName>Instructed__c</fullName>
    <label>Date Instructed</label>
    <type>Date</type>
</CustomField>