partial/force-app/main/default/objects/Opportunity/fields/Landlord_Id__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Id__c</fullName>
    <label>Landlord Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>