partial/force-app/main/default/objects/Opportunity/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude &amp; Longitude old</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>