partial/force-app/main/default/objects/Opportunity/fields/Latitude_Val__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Val__c</fullName>
    <formula>Unit__r.Latitude__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>