partial/force-app/main/default/objects/Opportunity/fields/Letting_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Letting_Agreement_Signed__c</fullName>
    <label>Letting Agreement Signed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>