partial/force-app/main/default/objects/Opportunity/fields/Letting_Brochure_Id__c.field-meta.xml
<CustomField>
    <fullName>Letting_Brochure_Id__c</fullName>
    <label>Letting Brochure Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>