partial/force-app/main/default/objects/Opportunity/fields/Letting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Letting_Fee__c</fullName>
    <label>Letting Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>