partial/force-app/main/default/objects/Opportunity/fields/Letting_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Letting_Fee_Type__c</fullName>
    <label>Letting Fee Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>