partial/force-app/main/default/objects/Opportunity/fields/Letting_Instructed__c.field-meta.xml
<CustomField>
    <fullName>Letting_Instructed__c</fullName>
    <label>Letting Instructed</label>
    <type>Date</type>
</CustomField>