partial/force-app/main/default/objects/Opportunity/fields/Letting_Public_Brochure_Url__c.field-meta.xml
<CustomField>
    <fullName>Letting_Public_Brochure_Url__c</fullName>
    <label>Letting Public Brochure Url</label>
    <type>Url</type>
</CustomField>