partial/force-app/main/default/objects/Opportunity/fields/Letting_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Letting_Qualifier__c</fullName>
    <label>Letting Qualifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>