partial/force-app/main/default/objects/Opportunity/fields/Letting_Rent_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Letting_Rent_Frequency__c</fullName>
    <label>Letting Rent Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>