partial/force-app/main/default/objects/Opportunity/fields/Letting_Rent_Includes__c.field-meta.xml
<CustomField>
    <fullName>Letting_Rent_Includes__c</fullName>
    <label>Letting Rent Includes</label>
    <length>16</length>
    <type>Text</type>
</CustomField>