partial/force-app/main/default/objects/Opportunity/fields/Local_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_Zone__c</fullName>
    <label>Local Time Zone old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>