partial/force-app/main/default/objects/Opportunity/fields/Local_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>Local_TimeZone__c</fullName>
    <formula>Unit__r.localTimeZone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Time Zone</label>
    <type>Text</type>
</CustomField>