partial/force-app/main/default/objects/Opportunity/fields/Longitude_Val__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Val__c</fullName>
    <formula>Unit__r.Latitude__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>