partial/force-app/main/default/objects/Opportunity/fields/Lost_Reason_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Remarks__c</fullName>
    <label>Lost Reason Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>