partial/force-app/main/default/objects/Opportunity/fields/Management_Company_Ids__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Ids__c</fullName>
    <label>Management Company Ids</label>
    <length>100</length>
    <type>Text</type>
</CustomField>