partial/force-app/main/default/objects/Opportunity/fields/Management_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Amount__c</fullName>
    <label>Management Fee Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>