partial/force-app/main/default/objects/Opportunity/fields/Management_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Type__c</fullName>
    <label>Management Fee Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>