partial/force-app/main/default/objects/Opportunity/fields/Minimum_Term__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Term__c</fullName>
    <label>Minimum Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>