partial/force-app/main/default/objects/Opportunity/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>