partial/force-app/main/default/objects/Opportunity/fields/Project_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Project_Interested_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Interested In</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>