partial/force-app/main/default/objects/Opportunity/fields/Public_Brochure_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Brochure_Url__c</fullName>
    <label>Public Brochure Url</label>
    <type>Url</type>
</CustomField>