partial/force-app/main/default/objects/Opportunity/fields/Reapit_ID__c.field-meta.xml
<CustomField>
    <fullName>Reapit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Reapit ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>