partial/force-app/main/default/objects/Opportunity/fields/Rent_Includes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Includes__c</fullName>
    <label>Rent Includes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>