partial/force-app/main/default/objects/Opportunity/fields/Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process__c</fullName>
    <label>Sales Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
            <value>
                <fullName>Tenancy</fullName>
            </value>
            <value>
                <fullName>Letting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>