partial/force-app/main/default/objects/Opportunity/fields/Seeing_Duration__c.field-meta.xml
<CustomField>
    <fullName>Seeing_Duration__c</fullName>
    <label>How long you have been looking?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>