partial/force-app/main/default/objects/Opportunity/fields/Selling_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Selling_Fee_Amount__c</fullName>
    <label>Selling Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>