partial/force-app/main/default/objects/Opportunity/fields/Selling_Shared_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Selling_Shared_Percentage__c</fullName>
    <label>Selling Shared Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>