partial/force-app/main/default/objects/Opportunity/fields/shifting_time__c.field-meta.xml
<CustomField>
    <fullName>shifting_time__c</fullName>
    <label>How quickly do you need to move?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>