partial/force-app/main/default/objects/Opportunity/fields/Solicitor_Details__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Details__c</fullName>
    <label>Solicitor Details Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>