partial/force-app/main/default/objects/Opportunity/fields/Solicotor_Details__c.field-meta.xml
<CustomField>
    <fullName>Solicotor_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicotor Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Solicotor Details)</relationshipLabel>
    <relationshipName>Project_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>