partial/force-app/main/default/objects/Opportunity/fields/Square_Meter_Min__c.field-meta.xml
<CustomField>
    <fullName>Square_Meter_Min__c</fullName>
    <label>Square Meter (Min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Min</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>190</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>